create google cloud vms

--- a/example/input/gcp.conf
+++ b/example/input/gcp.conf
@@ -1,16 +1,16 @@
 [gcp01]
 name = linuxserver01
-project = Web Presence Canada
+project = vm-creation-poc-379200
 team = Toronto Office Web Team
 purpose = webserver
 os = linux
-image = debian-10-buster-v20210916
+image = debian-10-buster-v20230206
 imageproject = debian-cloud
 zone = northamerica-northeast2-a
 
 [gcp02]
 name = winserver01
-project = Containers Are Us
+project = vm-creation-poc2
 team = Toronto Office Container Team
 purpose = containers
 os = windows
