feat: allow vm description

--- a/example/input/gcp.conf
+++ b/example/input/gcp.conf
@@ -7,6 +7,7 @@ os = linux
 image = debian-10-buster-v20230206
 imageproject = debian-cloud
 zone = northamerica-northeast2-a
+description = Linux is the best!
 
 [gcp02]
 name = winserver01
