--- a/example/input/gcp.conf
+++ b/example/input/gcp.conf
@@ -8,6 +8,7 @@ image = debian-10-buster-v20230206
 imageproject = debian-cloud
 zone = northamerica-northeast2-a
 description = Linux is the best!
+ports = 80, 443, 3333
 
 [gcp02]
 name = winserver01
@@ -18,3 +19,4 @@ os = windows
 image = windows-server-2019-dc-core-for-containers-v20211012
 imageproject = windows-cloud
 zone = northamerica-northeast2-b
+ports = 80, 443, 2222
