feat: allow opening of any ports

--- a/example/input/azure.conf
+++ b/example/input/azure.conf
@@ -7,6 +7,7 @@ team = Toronto Office Web Grls
 image = Debian
 location = canadacentral
 admin-username = azureuser
+ports = 80, 443, 2222
 [azure02]
 purpose = office apps
 os = windows
